# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yaml  docker-compose.yml  log.txt
.sqlx/: query-446ad9a68a5f239fce81cad43acf3e4850b15a2f3cb1efed09c3b38edb31a033.json  query-6d63457514e9be2b0fdf1b30c46a65702f37021e86c968de2eb51f9c196698da.json  query-b20308091f9773505ad85af1b8397805cffef5973317e43806608807534064f7.json
configuration/: base.yaml  production.yaml
migrations/: 20250219080233_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/send_email/: email_smtp.rs  mod.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
