[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
config = "0.15.8"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
uuid = {version = "1", features = ["v4"]}
chrono = "0.4.39"
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
once_cell = "1.20.3"
tracing-actix-web = "0.7.15"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.20.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"]}
rand = "0.9.0"

[dependencies.sqlx]
version = "0.8"
features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono"
]

[dev-dependencies]
fake = "4.0.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.139"
wiremock = "0.6.2"


